--- a/index.html
+++ b/index.html
@@ -445,16 +445,124 @@
       </div>
       <div class="box-clienti-underbox relative">
          <div class="container-60 abs-centre clearfix">
-            <div class="left-box w-50 f-left">
-               <h2 class="f-50px">Porta Dropbox Business nella tua azienda</h2>
+            <div class="left-box w-60">
+               <h2 class="f-50px">Porta Dropbox Business nella tua azienda.</h2>
             </div>
-            <div class="right-box w-50 f-left">
+            <div class="right-box w-40 absolute">
                <a class="btn-white-bg" href="#">Inizia la tua prova gratuita</a>
             </div>
          </div>
       </div>
-
+      <!-- FAQ -->
+      <div class="container-60">
+         <div id="faq-box" class="m-tb-100">
+            <h2 class="f-50px m-b-30">Domande frequenti</h2>
+            <!-- First FAQ -->
+            <div class="faq p-tb-30 clearfix w-100">
+               <div class="left-box f-left">
+                  <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+               </div>
+               <div class="right-box f-right">
+                  <i class="fas fa-chevron-down"></i>
+               </div>
+            </div>
+            <!-- Second FAQ -->
+            <div class="faq p-tb-30 clearfix w-100">
+               <div class="left-box f-left">
+                  <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+               </div>
+               <div class="right-box f-right">
+                  <i class="fas fa-chevron-down"></i>
+               </div>
+            </div>
+            <!-- Third FAQ -->
+            <div class="faq p-tb-30 clearfix w-100">
+               <div class="left-box f-left">
+                  <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+               </div>
+               <div class="right-box f-right">
+                  <i class="fas fa-chevron-down"></i>
+               </div>
+            </div>
+            <!-- Fourth FAQ -->
+            <div class="faq p-tb-30 clearfix w-100">
+               <div class="left-box f-left">
+                  <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+               </div>
+               <div class="right-box f-right">
+                  <i class="fas fa-chevron-down"></i>
+               </div>
+            </div>
+         </div>
+      </div>
    </main>
+   <!-- Footer -->
+   <footer>
+      <div class="container-70 clearfix p-t-100">
+         <!-- Liste link -->
+         <div class="lists w-100 clearfix p-b-100">
+            <!-- Dropbox footer -->
+            <div class="dropbox-footer w-20 f-left">
+               <p>Dropbox</p>
+               <ul>
+                  <li><a href="#">Applicazione desktop</a></li>
+                  <li><a href="#">Perchè Dropbox</a></li>
+                  <li><a href="#">Piani</a></li>
+                  <li><a href="#">Sicurezza</a></li>
+                  <li><a href="#">Funzioni</a></li>
+               </ul>
+            </div>
+            <!-- Prodotti -->
+            <div class="prodotti w-20 f-left">
+               <p>Prodotti</p>
+               <ul>
+                  <li><a href="#">Applicazione desktop</a></li>
+                  <li><a href="#">Perchè Dropbox</a></li>
+                  <li><a href="#">Piani</a></li>
+                  <li><a href="#">Sicurezza</a></li>
+                  <li><a href="#">Funzioni</a></li>
+               </ul>
+            </div>
+            <!-- Azienda -->
+            <div class="azienda w-20 f-left">
+               <p>Azienda</p>
+               <ul>
+                  <li><a href="#">Applicazione desktop</a></li>
+                  <li><a href="#">Perchè Dropbox</a></li>
+                  <li><a href="#">Piani</a></li>
+                  <li><a href="#">Sicurezza</a></li>
+                  <li><a href="#">Funzioni</a></li>
+               </ul>
+            </div>
+            <!-- Supporto -->
+            <div class="supporto w-20 f-left">
+               <p>Supporto</p>
+               <ul>
+                  <li><a href="#">Applicazione desktop</a></li>
+                  <li><a href="#">Perchè Dropbox</a></li>
+                  <li><a href="#">Piani</a></li>
+                  <li><a href="#">Sicurezza</a></li>
+                  <li><a href="#">Funzioni</a></li>
+               </ul>
+            </div>
+            <!-- Community -->
+            <div class="community w-20 f-left">
+               <p>Community</p>
+               <ul>
+                  <li><a href="#">Applicazione desktop</a></li>
+                  <li><a href="#">Perchè Dropbox</a></li>
+                  <li><a href="#">Piani</a></li>
+               </ul>
+            </div>
+         </div>
+         <!-- Lingua -->
+         <span>
+            <i class="fas fa-globe-europe"></i>
+            Italiano
+            <i class="fas fa-caret-up"></i>
+         </span>
+      </div>
+   </footer>
 </body>
 
 </html>
