add full width for link buttons

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                      </ul>
                      <!-- Button -->
                      <div class="prova-button m-b-30">
-                        <a class="btn p-10-35" href="#">Prova gratis per 30 giorni</a>
+                        <a class="btn fullwidth-btn" href="#">Prova gratis per 30 giorni</a>
                      </div>
                      <!-- Acquista ora -->
                      <span class="p-b-30">Oppure</span>
@@ -163,7 +163,7 @@
                      </ul>
                      <!-- Button -->
                      <div class="prova-button m-b-30 m-b-30">
-                        <a class="btn p-10-35" href="#">Prova gratis per 30 giorni</a>
+                        <a class="btn fullwidth-btn" href="#">Prova gratis per 30 giorni</a>
                      </div>
                      <!-- Acquista ora -->
                      <span class="p-b-30">Oppure</span>
@@ -222,7 +222,7 @@
                      </ul>
                      <!-- Button -->
                      <div class="prova-button m-b-30">
-                        <a class="btn p-10-35" href="#">Prova gratis per 30 giorni</a>
+                        <a class="btn fullwidth-btn" href="#">Prova gratis per 30 giorni</a>
                      </div>
                      <!-- Acquista ora -->
                      <span class="p-b-30">Oppure</span>
@@ -279,7 +279,7 @@
                         qualsiasi scala.</p>
                   </div>
                   <div class="w-25 f-left text-align-cntr">
-                     <a class="btn w-100" href="#"> Contatta l'ufficio vendite</a>
+                     <a class="fullwidth-btn btn" href="#"> Contatta l'ufficio vendite</a>
                   </div>
                </div>
             </div>
@@ -296,7 +296,9 @@
                   necessari per
                   raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto
                   continui.</p>
-               <a class="btn-white-bg" href="#">Trova un partner</a>
+               <div class="w-50">
+                  <a class="btn-white-bg fullwidth-btn" href="#">Trova un partner</a>
+               </div>
             </div>
          </div>
          <!-- Più operazioni, cards -->
@@ -399,6 +401,7 @@
       </div>
       <!-- Block clienti -->
       <div class="box-clienti m-t-50 clearfix">
+         <!-- Logo Container -->
          <div class="clients-logos f-left w-30">
             <div class="row w-100 h-50 clearfix">
                <div id="designit-logo" class="client-logo f-left w-50 h-100 relative">
@@ -424,6 +427,7 @@
                molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
             <p>Morten Thomsen, Global IT Lead</p>
          </div>
+         <!-- Logo Container -->
          <div class="clients-logos f-left w-30">
             <div class="row w-100 h-50 clearfix">
                <div id="world-bicycle-logo" class="client-logo f-left w-50 h-100 relative">
@@ -448,8 +452,8 @@
             <div class="left-box w-60">
                <h2 class="f-50px">Porta Dropbox Business nella tua azienda.</h2>
             </div>
-            <div class="right-box w-40 absolute">
-               <a class="btn-white-bg" href="#">Inizia la tua prova gratuita</a>
+            <div class="right-box w-30 absolute">
+               <a class="btn-white-bg fullwidth-btn" href="#">Inizia la tua prova gratuita</a>
             </div>
          </div>
       </div>
