add float to "punti salienti" lists

--- a/index.html
+++ b/index.html
@@ -118,24 +118,24 @@
                      <div class="punti-salienti">
                         <ul class="m-tb-20">
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Invia file fino a 100 GB con Dropbox Transfert
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Invia file fino a 100 GB con Dropbox Transfert</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Cartella offline su dispositivi mobili
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Cartella offline su dispositivi mobili</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Pulizia remota dell'acount
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Pulizia remota dell'acount</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Filigrana documento
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Filigrana documento</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Assistenza prioritaria via email e chat
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Assistenza prioritaria via email e chat</p>
                            </li>
                         </ul>
                      </div>
@@ -173,28 +173,28 @@
                      <div class="punti-salienti">
                         <ul class="m-tb-20">
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Invia file fino a 100 GB con Dropbox Transfert
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Invia file fino a 100 GB con Dropbox Transfert</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Cartella offline su dispositivi mobili
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Cartella offline su dispositivi mobili</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Pulizia remota dell'acount
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Pulizia remota dell'acount</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Filigrana documento
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Filigrana documento</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Assistenza prioritaria via email e chat
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Assistenza prioritaria via email e chat</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Assistenza prioritaria via email e chat
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Assistenza prioritaria via email e chat</p>
                            </li>
                         </ul>
                      </div>
@@ -232,28 +232,28 @@
                      <div class="punti-salienti">
                         <ul class="m-tb-20">
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Invia file fino a 100 GB con Dropbox Transfert
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Invia file fino a 100 GB con Dropbox Transfert</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Cartella offline su dispositivi mobili
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Cartella offline su dispositivi mobili</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Pulizia remota dell'acount
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Pulizia remota dell'acount</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Filigrana documento
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Filigrana documento</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Assistenza prioritaria via email e chat
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Assistenza prioritaria via email e chat</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check"></i>
-                              Assistenza prioritaria via email e chat
+                              <i class="fas fa-check f-left"></i>
+                              <p class="f-left">Assistenza prioritaria via email e chat</p>
                            </li>
                         </ul>
                      </div>
