--- a/index.html
+++ b/index.html
@@ -25,22 +25,23 @@
       <!-- Nav bar -->
       <nav id="nav" class="clearfix">
          <!-- Parte sinistra -->
-         <div id="nav-left" class="w-50 f-left m-rl-15">
-            <img id="logo" src="img/logo-small.png" alt="Dropbox Logo">
+         <div id="nav-left" class="w-50 f-left">
             <ul>
+               <li class=""><a class="m-rl-20" href="#"><img id="logo" src="img/logo-small.png" alt="Dropbox Logo"></a>
+               </li>
                <li class=""><a class="m-rl-20" href="#">Perchè Dropbox?</a></li>
                <li class=""><a class="m-rl-20" href="#">Funzioni</a></li>
                <li class=""><a class="m-rl-20" href="#">Piani e prezzi</a></li>
             </ul>
          </div>
          <!-- Parte destra -->
-         <div id="nav-right" class="w-50 f-left m-rl-15">
+         <div id="nav-right" class="w-50 f-left">
             <ul>
                <li class=""><a class="m-rl-20" href="#">Supporto</a></li>
                <li class=""><a class="m-rl-20" href="#">Contatta l'ufficio vendite</a></li>
                <li class=""><a class="m-rl-20" href="#">Accedi</a></li>
+               <li class=""><a class="btn m-rl-25" href="#">Inizia</a></li>
             </ul>
-            <a class="btn m-rl-25" href="#">Inizia</a>
          </div>
       </nav>
       <!-- Jumbotron -->
