improved cards width

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <!-- First cards row -->
             <div class="card-row m-t-30 m-b-100 clearfix">
                <!-- First card -->
-               <div class="card f-left m-rl-25">
+               <div class="card f-left">
                   <picture class="card-pic">
                      <img src="img/business-feature-switching-tools.png" alt="Switching Tools">
                   </picture>
@@ -322,7 +322,7 @@
                   </div>
                </div>
                <!-- Second card -->
-               <div class="card f-left m-rl-25">
+               <div class="card f-left m-rl-60">
                   <picture class="card-pic">
                      <img src="img/business-feature-coordinate-it.png" alt="Coordinate a team">
                   </picture>
@@ -336,7 +336,7 @@
                   </div>
                </div>
                <!-- Third card -->
-               <div class="card f-left m-rl-25">
+               <div class="card f-left">
                   <picture class="card-pic">
                      <img src="img/business-feature-multi-device.png" alt="Multi Device">
                   </picture>
@@ -353,7 +353,7 @@
             <!-- Second cards row -->
             <div class="card-row m-t-30 m-b-200 clearfix">
                <!-- First card -->
-               <div class="card f-left m-rl-25">
+               <div class="card f-left">
                   <picture class="card-pic">
                      <img src="img/business-feature-integrations-it.png" alt="Switching Tools">
                   </picture>
@@ -367,7 +367,7 @@
                   </div>
                </div>
                <!-- Second card -->
-               <div class="card f-left m-rl-25">
+               <div class="card f-left m-rl-60">
                   <picture class="card-pic">
                      <img src="img/business-feature-send-files-it.png" alt="Coordinate a team">
                   </picture>
@@ -381,7 +381,7 @@
                   </div>
                </div>
                <!-- Third card -->
-               <div class="card f-left m-rl-25">
+               <div class="card f-left">
                   <picture class="card-pic">
                      <img src="img/business-feature-security.png" alt="Multi Device">
                   </picture>
