add icon to list

--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
                      <h3 class="price m-tb-15">19,99 &euro;</h3>
                      <p class="price-time">/ mese</p>
                      <!-- Icon section -->
-                     <ul class="m-tb-20">
-                        <li class="m-tb-15"><i class="far fa-user"></i> 1 utente</li>
-                        <li class="m-tb-15"><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
-                        <li class="m-tb-15"><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e
+                     <ul class="list-three-icons m-tb-20">
+                        <li class="user-icon m-tb-15">1 utente</li>
+                        <li class="folder-icon m-tb-15">3 TB di spazio di archiviazione
+                           sicuro</li>
+                        <li class="pencil-icon m-tb-15">Funzioni di produttività
+                           premium e
                            condivisione file
                            semplice e sicura</li>
                      </ul>
@@ -119,24 +121,19 @@
                      <div class="punti-salienti">
                         <ul class="m-tb-20">
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Invia file fino a 100 GB con Dropbox Transfert</p>
+                              <p>Invia file fino a 100 GB con Dropbox Transfert</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Cartella offline su dispositivi mobili</p>
+                              <p>Cartella offline su dispositivi mobili</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Pulizia remota dell'acount</p>
+                              <p>Pulizia remota dell'acount</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Filigrana documento</p>
+                              <p>Filigrana documento</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Assistenza prioritaria via email e chat</p>
+                              <p>Assistenza prioritaria via email e chat</p>
                            </li>
                         </ul>
                      </div>
@@ -155,10 +152,10 @@
                      <h3 class="price m-tb-15">19,99 &euro;</h3>
                      <p class="price-time">/ utente / mese, a partire da 3 utenti</p>
                      <!-- Icon section -->
-                     <ul class="m-tb-20">
-                        <li class="m-tb-15"><i class="fas fa-user-plus"></i> 1 utente</li>
-                        <li class="m-tb-15"><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
-                        <li class="m-tb-15"><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione
+                     <ul class="list-three-icons m-tb-20">
+                        <li class="user-plus-icon m-tb-15">1 utente</li>
+                        <li class="folder-icon m-tb-15">3 TB di spazio di archiviazione sicuro</li>
+                        <li class="smile-icon m-tb-15">Funzioni di produttività premium e condivisione
                            file
                            semplice e sicura</li>
                      </ul>
@@ -174,28 +171,22 @@
                      <div class="punti-salienti">
                         <ul class="m-tb-20">
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Invia file fino a 100 GB con Dropbox Transfert</p>
+                              <p>Invia file fino a 100 GB con Dropbox Transfert</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Cartella offline su dispositivi mobili</p>
+                              <p>Cartella offline su dispositivi mobili</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Pulizia remota dell'acount</p>
+                              <p>Pulizia remota dell'acount</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Filigrana documento</p>
+                              <p>Filigrana documento</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Assistenza prioritaria via email e chat</p>
+                              <p>Assistenza prioritaria via email e chat</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Assistenza prioritaria via email e chat</p>
+                              <p>Assistenza prioritaria via email e chat</p>
                            </li>
                         </ul>
                      </div>
@@ -214,10 +205,10 @@
                      <h3 class="price m-tb-15">19,99 &euro;</h3>
                      <p class="price-time">/ mese</p>
                      <!-- Icon section -->
-                     <ul class="m-tb-20">
-                        <li class="m-tb-15"><i class="fas fa-user-plus"></i> 1 utente</li>
-                        <li class="m-tb-15"><i class="far fa-smile"></i> 3 TB di spazio di archiviazione sicuro</li>
-                        <li class="m-tb-15"><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e
+                     <ul class="list-three-icons m-tb-20">
+                        <li class="user-plus-icon m-tb-15">1 utente</li>
+                        <li class="smile-icon m-tb-15">3 TB di spazio di archiviazione sicuro</li>
+                        <li class="pencil-icon m-tb-15">Funzioni di produttività premium e
                            condivisione file
                            semplice e sicura</li>
                      </ul>
@@ -233,28 +224,22 @@
                      <div class="punti-salienti">
                         <ul class="m-tb-20">
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Invia file fino a 100 GB con Dropbox Transfert</p>
+                              <p>Invia file fino a 100 GB con Dropbox Transfert</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Cartella offline su dispositivi mobili</p>
+                              <p>Cartella offline su dispositivi mobili</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Pulizia remota dell'acount</p>
+                              <p>Pulizia remota dell'acount</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Filigrana documento</p>
+                              <p>Filigrana documento</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Assistenza prioritaria via email e chat</p>
+                              <p>Assistenza prioritaria via email e chat</p>
                            </li>
                            <li class="m-tb-15">
-                              <i class="fas fa-check f-left"></i>
-                              <p class="f-left">Assistenza prioritaria via email e chat</p>
+                              <p>Assistenza prioritaria via email e chat</p>
                            </li>
                         </ul>
                      </div>
