--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
          <!-- Parte sinistra -->
          <div id="nav-left" class="w-50 f-left">
             <ul>
-               <li class=""><a class="m-rl-20" href="#"><img id="logo" src="img/logo-small.png" alt="Dropbox Logo"></a>
+               <li class=""><a href="#"><img id="logo" src="img/logo-small.png" alt="Dropbox Logo"></a>
                </li>
-               <li class=""><a class="m-rl-20" href="#">Perchè Dropbox?</a></li>
-               <li class=""><a class="m-rl-20" href="#">Funzioni</a></li>
-               <li class=""><a class="m-rl-20" href="#">Piani e prezzi</a></li>
+               <li class=""><a href="#">Perchè Dropbox?</a></li>
+               <li class=""><a href="#">Funzioni</a></li>
+               <li class=""><a href="#">Piani e prezzi</a></li>
             </ul>
          </div>
          <!-- Parte destra -->
          <div id="nav-right" class="w-50 f-left">
             <ul>
-               <li class=""><a class="m-rl-20" href="#">Supporto</a></li>
-               <li class=""><a class="m-rl-20" href="#">Contatta l'ufficio vendite</a></li>
-               <li class=""><a class="m-rl-20" href="#">Accedi</a></li>
+               <li class=""><a href="#">Supporto</a></li>
+               <li class=""><a href="#">Contatta l'ufficio vendite</a></li>
+               <li class=""><a href="#">Accedi</a></li>
                <li class=""><a class="btn m-rl-25" href="#">Inizia</a></li>
             </ul>
          </div>
