add drop-down menu to nav

--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
       <nav id="nav" class="clearfix">
          <!-- Parte sinistra -->
          <div id="nav-left" class="w-50 f-left">
-            <ul>
-               <li class=""><a href="#"><img id="logo" src="img/logo-small.png" alt="Dropbox Logo"></a>
+            <ul class="nav-menu">
+               <li class=""><a class="nav-link" href="#"><img id="logo" src="img/logo-small.png" alt="Dropbox Logo"></a>
                </li>
-               <li class=""><a href="#">Perchè Dropbox?</a></li>
-               <li class=""><a href="#">Funzioni</a></li>
-               <li class=""><a href="#">Piani e prezzi</a></li>
+               <li class=""><a class="nav-link" href="#">Perchè Dropbox?</a></li>
+               <li class=""><a class="nav-link" href="#">Funzioni</a></li>
+               <li class=""><a class="nav-link" href="#">Piani e prezzi</a></li>
             </ul>
          </div>
          <!-- Parte destra -->
          <div id="nav-right" class="w-50 f-left">
-            <ul>
-               <li class="">
-                  <a href="#">Supporto</a>
-                  <ul>
-                     <li><a href="#">Helo</a></li>
-                     <li><a href="#">Hello</a></li>
+            <ul class="nav-menu">
+               <li class="with-sub-menu">
+                  <a class="nav-link" href="#">Supporto<i class="fas fa-caret-down"></i></a>
+                  <ul class="sub-menu">
+                     <li><a href="#">Centro d'assistenza</a></li>
+                     <li><a href="#">Forum community</a></li>
                   </ul>
                </li>
-               <li class=""><a href="#">Contatta l'ufficio vendite</a></li>
-               <li class=""><a href="#">Accedi</a></li>
+               <li class=""><a class="nav-link" href="#">Contatta l'ufficio vendite</a></li>
+               <li class=""><a class="nav-link" href="#">Accedi</a></li>
                <li class=""><a class="btn m-rl-25" href="#">Inizia</a></li>
             </ul>
          </div>
