add dropdown div to FAQ

--- a/index.html
+++ b/index.html
@@ -454,39 +454,93 @@
          <div id="faq-box" class="m-tb-100">
             <h2 class="f-50px m-b-30">Domande frequenti</h2>
             <!-- First FAQ -->
-            <div class="faq p-tb-30 clearfix w-100">
-               <div class="left-box f-left">
-                  <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-               </div>
-               <div class="right-box f-right">
-                  <i class="fas fa-chevron-down"></i>
+            <div class="faq">
+               <div class="faq-dropdown w-100 clearfix">
+                  <div class="f-left w-75">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business
+                     Advanced?
+                  </div>
+                  <span class="f-right w-25">
+                     <i class="fas fa-chevron-down"></i>
+                  </span>
+                  <div class="menu-drop">
+                     <p>Il piano Standard fornisce ai team 5 TB (5000GB) di spazio di archiviazione e semplici strumenti
+                        di condivisione e collaborazione. Per i team che ahanno bisogno di più spazio di archiviazione
+                        e sicurezza, il piano Advanced offre tutto lo spazio necessario ai team, oltre a sofisticate
+                        funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui
+                        nostri piani, consulta questa pagina.</p>
+                  </div>
                </div>
             </div>
             <!-- Second FAQ -->
-            <div class="faq p-tb-30 clearfix w-100">
-               <div class="left-box f-left">
-                  <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-               </div>
-               <div class="right-box f-right">
-                  <i class="fas fa-chevron-down"></i>
+            <div class="faq">
+               <div class="faq-dropdown w-100 clearfix">
+                  <div class="f-left w-75">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business
+                     Advanced?
+                  </div>
+                  <span class="f-right w-25">
+                     <i class="fas fa-chevron-down"></i>
+                  </span>
+                  <div class="menu-drop">
+                     <p>Il piano Standard fornisce ai team 5 TB (5000GB) di spazio di archiviazione e semplici strumenti
+                        di condivisione e collaborazione. Per i team che ahanno bisogno di più spazio di archiviazione
+                        e sicurezza, il piano Advanced offre tutto lo spazio necessario ai team, oltre a sofisticate
+                        funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui
+                        nostri piani, consulta questa pagina.</p>
+                  </div>
                </div>
             </div>
             <!-- Third FAQ -->
-            <div class="faq p-tb-30 clearfix w-100">
-               <div class="left-box f-left">
-                  <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-               </div>
-               <div class="right-box f-right">
-                  <i class="fas fa-chevron-down"></i>
+            <div class="faq">
+               <div class="faq-dropdown w-100 clearfix">
+                  <div class="f-left w-75">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business
+                     Advanced?
+                  </div>
+                  <span class="f-right w-25">
+                     <i class="fas fa-chevron-down"></i>
+                  </span>
+                  <div class="menu-drop">
+                     <p>Il piano Standard fornisce ai team 5 TB (5000GB) di spazio di archiviazione e semplici strumenti
+                        di condivisione e collaborazione. Per i team che ahanno bisogno di più spazio di archiviazione
+                        e sicurezza, il piano Advanced offre tutto lo spazio necessario ai team, oltre a sofisticate
+                        funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui
+                        nostri piani, consulta questa pagina.</p>
+                  </div>
                </div>
             </div>
             <!-- Fourth FAQ -->
-            <div class="faq p-tb-30 clearfix w-100">
-               <div class="left-box f-left">
-                  <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+            <div class="faq">
+               <div class="faq-dropdown w-100 clearfix">
+                  <div class="f-left w-75">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business
+                     Advanced?
+                  </div>
+                  <span class="f-right w-25">
+                     <i class="fas fa-chevron-down"></i>
+                  </span>
+                  <div class="menu-drop">
+                     <p>Il piano Standard fornisce ai team 5 TB (5000GB) di spazio di archiviazione e semplici strumenti
+                        di condivisione e collaborazione. Per i team che ahanno bisogno di più spazio di archiviazione
+                        e sicurezza, il piano Advanced offre tutto lo spazio necessario ai team, oltre a sofisticate
+                        funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui
+                        nostri piani, consulta questa pagina.</p>
+                  </div>
                </div>
-               <div class="right-box f-right">
-                  <i class="fas fa-chevron-down"></i>
+            </div>
+            <!-- Fifth FAQ -->
+            <div class="faq">
+               <div class="faq-dropdown w-100 clearfix">
+                  <div class="f-left w-75">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business
+                     Advanced?
+                  </div>
+                  <span class="f-right w-25">
+                     <i class="fas fa-chevron-down"></i>
+                  </span>
+                  <div class="menu-drop">
+                     <p>Il piano Standard fornisce ai team 5 TB (5000GB) di spazio di archiviazione e semplici strumenti
+                        di condivisione e collaborazione. Per i team che ahanno bisogno di più spazio di archiviazione
+                        e sicurezza, il piano Advanced offre tutto lo spazio necessario ai team, oltre a sofisticate
+                        funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui
+                        nostri piani, consulta questa pagina.</p>
+                  </div>
                </div>
             </div>
          </div>
