add bouncing animation to arrow-down

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                      integrato per ottimizzare il flusso di lavoro esistente.</p>
                   <a class="btn" href="#">Inizia la tua prova gratuita</a>
                   <p id="annulla" class="p-t-25">Annulla in qualsiasi momento</p>
-                  <a class="arrow-down" href="#">
+                  <a class="arrow-down" href="#contatta-ufficio-vendite">
                      <i class="fa fa-arrow-down fa-3x p-t-50"></i>
                   </a>
                </div>
@@ -253,7 +253,7 @@
                </div>
             </div>
             <!-- Tabella prezzi orizzontale -->
-            <div class="contatta-ufficio-vendite m-tb-60">
+            <div id="contatta-ufficio-vendite" class="contatta-ufficio-vendite m-tb-60">
                <!-- Barra superiore -->
                <div class="n-customer">
                   <span>
