add custom radio

--- a/index.html
+++ b/index.html
@@ -87,10 +87,20 @@
          <section id="prices">
             <h2>Trova il piano Dropbox Business che fa per te</h2>
             <div id="scelta-fatturazione" class="m-t-50">
-               <div class="fake-radio first"></div>
+               <label for="fatturazione-mensile" class="radio">
+                  <input type="radio" name="fatturazione" id="fatturazione-mensile" class="input-radio">
+                  <div class="radio-radio"></div>
+                  Fatturazione mensile
+               </label>
+               <label for="fatturazione-annuale" class="radio">
+                  <input type="radio" name="fatturazione" id="fatturazione-annuale" class="input-radio">
+                  <div class="radio-radio"></div>
+                  Fatturazione annuale
+               </label>
+               <!-- <div class="fake-radio first"></div>
                <span class="fatturazione m-r-15">Fatturazione mensile</span>
                <div class="fake-radio second"></div>
-               <span class="fatturazione m-r-15">Fatturazione annuale</span>
+               <span class="fatturazione m-r-15">Fatturazione annuale</span> -->
             </div>
             <div id="prices-table" class="clearfix m-t-30">
                <!-- Prima colonna -->
